# SobelParrarel

./: .gitignore  CMakeLists.txt  GaussianKernel.h  ImageData.cpp  ImageData.h  ImageDataClass.cpp  ImageTransformation.cpp  TransformationMatrix.cpp  TransformationMatrix.h  main.cpp
include/: BorderType.h  ImageDataClass.h  ImageTransformation.h  TransformationMatrix.h
